# nova_voice_engine_V2

./: CMakeLists.txt  README.md
scripts/: fetch_deps.sh
src/: main.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h  AudioPlayer.cpp  AudioPlayer.h  AudioPreprocessor.cpp  AudioPreprocessor.h  NoiseSuppresor.cpp  NoiseSuppresor.h
src/buffer/: BufferManager.cpp  BufferManager.h
src/codec/: BitrateCalculator.cpp  BitrateCalculator.h  LyraCodec.cpp  LyraCodec.h
src/config/: Config.cpp  Config.h
src/network/: UDPManager.cpp  UDPManager.h
